# mmath

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/mmath/: mmath.hpp  mmath_concepts.hpp  mmath_matrixelementary.hpp
src/mmath/: mmath.cpp  mmath.hpp  mmath_concepts.hpp  mmath_matrix.hpp  mmath_matrixalgorithms.hpp  mmath_matrixeo.hpp  mmath_ostream.hpp
test/mmath/: mmath_test.cpp
